# llm-k8s-test

./: .gitignore  Dockerfile  Dockerfile.llm  README.md  llm-manifest.yml  main.py  manifest.yml  prj-configmap.yml  pyproject.toml  requirements-llm.txt  requirements.txt  verify_s3.py
.github/workflows/: docker-build.yml  llm-docker-build.yml
benchmark_operations/: __init__.py  benchmark_operations.py
cli_operations/: __init__.py  cli_operations.py
config/: s3_config_handler.py
configs/: llm_config.yaml
doc/: CLI_REFERENCE.md  DEPLOYMENT_GUIDE.md  K8s_commands.md  Seeweb_setup_guide.md
image_processing/: image_processing_operations.py
llm_operations/: __init__.py  llm_config.py  llm_inference.py  metrics.py
s3_operations/: __init__.py  s3_client.py  s3_operations.py
streamlit_app/: __init__.py  app.py
